2003-07-02  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (distclean): remove install-octave here.

2003-06-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: If user doesn't specify --enable-rpath, then
	default is to enable it.

2003-06-04  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (GNUPLOT_HAS_FRAMES): Eliminate variable.

	* emacs/octave-mod.el (octave-variables): Eliminate
	gnuplot_has_multiplot.

2003-05-21  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: In check for f_open in libf2c, only use
	-L. -lconflib if we have created libconflib.a.

2003-05-16  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_PROG_GPERF): Provide struct decl so -t option
	succeeds with gperf 3.0.

	* Makeconf.in (NO_OCT_FILE_STRIP): Use -C arg for make.

	* octMakefile.in (DIRS_TO_MAKE): Use $(shell ...) instead of `...`.

2003-05-14  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in, octMakefile.in, emacs/Makefile.in,
	examples/Makefile.in: Handle DESTDIR.

2003-05-13  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (sbindir): New variable substitution.

2003-04-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Don't define WITH_KPATHSEARCH.

2003-04-24  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Look for wsock32 library on MinGW systems.

2003-04-22  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (OCTAVE_LOCAL_BUFFER): Always allocate temporary
	buffer using new.

2003-04-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makefile.in octMakefile.in: Delete kpathsea targets.

	* kpathsea: Delete all files and directory.

	* configure.in: Don't run configure in kpathsea subdirectory.

	* README.kpathsea: New file.
	* octMakefile.in (DISTFILES): Include it in the list.

	* Makeconf.in (do-subst-config-vals): Don't substitute it.

	* configure.in: Also check for basename.
	Don't substitute LIBKPATHSEA.

2003-04-17  John W. Eaton  <jwe@bevo.che.wisc.edu>
