@@ -5,9 +5,40 @@
 # Rafael Laboissiere <rafael@laboissiere.net>
 # This script is in the public domain
 
+CANONICAL_HOST_TYPE="%OCTAVE_CANONICAL_HOST_TYPE%"
+DEFAULT_PAGER="%OCTAVE_DEFAULT_PAGER%"
+ARCHLIBDIR="%OCTAVE_ARCHLIBDIR%"
+BINDIR="%OCTAVE_BINDIR%"
+DATADIR="%OCTAVE_DATADIR%"
+EXEC_PREFIX="%OCTAVE_EXEC_PREFIX%"
+FCNFILEDIR="%OCTAVE_FCNFILEDIR%"
+FCNFILEPATH="%OCTAVE_FCNFILEPATH%"
+IMAGEDIR="%OCTAVE_IMAGEDIR%"
+IMAGEPATH="%OCTAVE_IMAGEPATH%"
+INCLUDEDIR="%OCTAVE_INCLUDEDIR%"
+INFODIR="%OCTAVE_INFODIR%"
+INFOFILE="%OCTAVE_INFOFILE%"
+LIBDIR="%OCTAVE_LIBDIR%"
+LIBEXECDIR="%OCTAVE_LIBEXECDIR%"
+LIBEXECDIR="%OCTAVE_LIBEXECDIR%"
+LOCALARCHLIBDIR="%OCTAVE_LOCALARCHLIBDIR%"
+LOCALFCNFILEDIR="%OCTAVE_LOCALFCNFILEDIR%"
+LOCALFCNFILEPATH="%OCTAVE_LOCALFCNFILEPATH%"
+LOCALOCTFILEDIR="%OCTAVE_LOCALOCTFILEDIR%"
+LOCALOCTFILEPATH="%OCTAVE_LOCALOCTFILEPATH%"
+LOCALSTARTUPFILEDIR="%OCTAVE_LOCALSTARTUPFILEDIR%"
+LOCALVERARCHLIBDIR="%OCTAVE_LOCALVERARCHLIBDIR%"
+LOCALVERFCNFILEDIR="%OCTAVE_LOCALVERFCNFILEDIR%"
+LOCALVEROCTFILEDIR="%OCTAVE_LOCALVEROCTFILEDIR%"
+MAN1DIR="%OCTAVE_MAN1DIR%"
+MAN1EXT="%OCTAVE_MAN1EXT%"
+MANDIR="%OCTAVE_MANDIR%"
+OCTFILEDIR="%OCTAVE_OCTFILEDIR%"
+OCTINCLUDEDIR="%OCTAVE_OCTINCLUDEDIR%"
+OCTLIBDIR="%OCTAVE_OCTLIBDIR%"
+PREFIX="%OCTAVE_PREFIX%"
+STARTUPFILEDIR="%OCTAVE_STARTUPFILEDIR%"
 VERSION="%OCTAVE_VERSION%"
-OCT_SITE_DIR="%OCTAVE_LOCALVEROCTFILEDIR%"
-M_SITE_DIR="%OCTAVE_LOCALVERFCNFILEDIR%"
 
 usage_msg="usage: octave-config [options]"
 
@@ -16,7 +47,7 @@ if [ $# -eq 0 ]; then
   exit 1
 fi
 
-for arg
+while [ $# -gt 0 ]
 do
   case "$1" in
     -h | -\? | --help)
@@ -35,17 +66,46 @@ Options:
 
   -v, --version       Print the Octave version number.
 
+  --variable VAR      Print the value of the given configuration
+		      variable VAR:
+
+			CANONICAL_HOST_TYPE    LOCALFCNFILEDIR    
+			DEFAULT_PAGER	       LOCALFCNFILEPATH
+			ARCHLIBDIR	       LOCALOCTFILEDIR
+			BINDIR		       LOCALOCTFILEPATH
+			DATADIR		       LOCALSTARTUPFILEDIR
+			EXEC_PREFIX	       LOCALVERARCHLIBDIR
+			FCNFILEDIR	       LOCALVERFCNFILEDIR
+			FCNFILEPATH	       LOCALVEROCTFILEDIR
+			IMAGEDIR	       MAN1DIR
+			IMAGEPATH	       MAN1EXT
+			INCLUDEDIR	       MANDIR
+			INFODIR		       OCTFILEDIR
+			INFOFILE	       OCTINCLUDEDIR
+			LIBDIR		       OCTLIBDIR
+			LIBEXECDIR	       PREFIX
+			LIBEXECDIR	       STARTUPFILEDIR
+			LOCALARCHLIBDIR        VERSION
+
 EOF
       exit 0
     ;;
     --m-site-dir)
-      echo $M_SITE_DIR
+      echo $OCTAVE_LOCALVERFCNFILEDIR
     ;;
     --oct-site-dir)
-      echo $OCT_SITE_DIR
+      echo $OCTAVE_LOCALVEROCTFILEDIR
     ;;
     -v | --version)
       echo $VERSION
+    ;;
+    --variable)
+      shift
+      if [ $# -eq 0 ]; then
+        echo "octave-config: --version option requires argument" 1>&2
+        exit 1
+      fi
+      eval echo \${$1}
     ;;
     *)
       echo "octave-config: unrecognized argument $1" 2>&1
