@@ -113,7 +113,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #endif
 
 #ifndef OCTAVE_LOCALSTARTUPFILEDIR
-#define OCTAVE_LOCALSTARTUPFILEDIR OCTAVE_LOCALFCNFILEDIR "/startup"
+#define OCTAVE_LOCALSTARTUPFILEDIR %OCTAVE_LOCALSTARTUPFILEDIR%
 #endif
 
 #ifndef OCTAVE_LOCALVERARCHLIBDIR
@@ -157,7 +157,7 @@ Software Foundation, 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 #endif
 
 #ifndef OCTAVE_STARTUPFILEDIR
-#define OCTAVE_STARTUPFILEDIR OCTAVE_FCNFILEDIR "/startup"
+#define OCTAVE_STARTUPFILEDIR %OCTAVE_STARTUPFILEDIR%
 #endif
 
 extern std::string Voctave_home;
