@@ -1,3 +1,11 @@
+2003-07-07  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* Makeconf.in: Set and substitute values for startupfiledir and
+	localstartupfiledir.
+
+	* octave-config.in: Allow other configuration defaults to be
+	accessed using --variable VAR option.
+
 2003-07-02  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* octMakefile.in (distclean): remove install-octave here.
